crates/tui/snapshots/fullscreen/marketplace/lsp_available_servers.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Language servers ─────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Available    Configured                                               │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Filter server IDs                                                  │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Find language servers in Marketplace  ·  Match the exact language rout │             
            │  Configure a server by ID  ·  Set mode and optional program path        │             
            │  Refresh servers  ·  Lists enabled, resolved servers without starting p │             
            │  web-lsp  ·  Available · typescript, javascript                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter to confirm  ·  Tab/Shift+Tab to switch  ·  / to search  ·  Esc to close
