crates/tui/snapshots/fullscreen/marketplace/marketplace_catalog_offline.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Extensions ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Marketplace    MCP    Hooks    Plugins                      │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  server error -32000: Catalog offline                                   │             
            │> official                                                             - │             
            │  Skills ─────────────────────────────────────────────────────────────── │             
            │  web@official                                                         + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  / search · ←/→ details · i install · r refresh
