crates/tui/snapshots/fullscreen/marketplace/marketplace_chinese_installed.snap
---
source: crates/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 扩 展  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   技 能     扩 展 市 场     MCP    钩 子     插 件                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 扩 展 市 场 ， 按  Enter 搜 索                                         │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  official                                                             - │             
            │  技 能  ───────────────────────────────────────────────────────────────── │             
            │> web@official                                                         + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  / 搜 索  · ←/→ 详 情  · u 卸 载  · r 刷 新
